--- a/_layouts/jurisdiction.html
+++ b/_layouts/jurisdiction.html
@@ -31,7 +31,7 @@ layout: default
             <div class="status-border">
               <div class="status-stats">
                 <h2><a href="{{ thisyear }}">{{ thisyear }}</a></h2>
-                <p>{{ site.data.gazettes.stats.counts[page.jurisdiction].available.year[thisyear] }} {% if site.data.gazettes.stats.counts[page.jurisdiction].available.year[thisyear] == 1 %}gazette{% else %}gazettes{% endif %}</p>
+                <p class="status-up"><i class="fa fa-bars" aria-hidden="true"></i> {{ site.data.gazettes.stats.counts[page.jurisdiction].available.year[thisyear] }} {% if site.data.gazettes.stats.counts[page.jurisdiction].available.year[thisyear] == 1 %}gazette{% else %}<!--gazettes-->{% endif %}</p>
               </div>
               <div year="{{ thisyear }}" class="monthly-chart"></div>
             </div>
