--- a/_layouts/jurisdiction.html
+++ b/_layouts/jurisdiction.html
@@ -27,11 +27,11 @@ layout: default
               <small>{{ site.data.gazettes.stats.counts[page.jurisdiction].available.year[thisyear] }} {% if site.data.gazettes.stats.counts[page.jurisdiction].available.year[thisyear] == 1 %}gazette{% else %}gazettes{% endif %}</small></h2>
             </div>-->
 
-            <div class="col-md-4 status-box">
+            <div class="col-md-4 col-sm-6 col-xs-12 status-box">
             <div class="status-border">
               <div class="status-stats">
                 <h2><a href="{{ thisyear }}">{{ thisyear }}</a></h2>
-                <p class="status-up"><i class="fa fa-bars" aria-hidden="true"></i> {{ site.data.gazettes.stats.counts[page.jurisdiction].available.year[thisyear] }} {% if site.data.gazettes.stats.counts[page.jurisdiction].available.year[thisyear] == 1 %}gazette{% else %}<!--gazettes-->{% endif %}</p>
+                <p class="status-up"><i class="fa fa-signal" aria-hidden="true"></i> {{ site.data.gazettes.stats.counts[page.jurisdiction].available.year[thisyear] }} {% if site.data.gazettes.stats.counts[page.jurisdiction].available.year[thisyear] == 1 %}gazette{% else %}gazettes{% endif %}</p>
               </div>
               <div year="{{ thisyear }}" class="monthly-chart"></div>
             </div>
