--- a/_layouts/year.html
+++ b/_layouts/year.html
@@ -16,12 +16,15 @@ layout: default
   </div>
 
   <div class="row year-stats">
-    <div class="col-md-2">
-      <h3>{{ site.data.gazettes.stats.counts[page.jurisdiction].available.year[page.year] }} {% if site.data.gazettes.stats.counts[page.jurisdiction].available.year[page.year] == 1 %}gazette{% else %}gazettes{% endif %}</h3>
-    </div>
-    <div class="col-md-4">
+    <div class="col-md-6">
+
+      <h3 class="status-year-count"><i class="fa fa-signal" aria-hidden="true"></i> {{ site.data.gazettes.stats.counts[page.jurisdiction].available.year[page.year] }} {% if site.data.gazettes.stats.counts[page.jurisdiction].available.year[page.year] == 1 %}gazette{% else %}gazettes{% endif %}</h3>
       <div year="{{ page.year }}" class="monthly-chart"></div>
+    
     </div>
+    <!--<div class="col-md-6">
+      <div year="{{ page.year }}" class="monthly-chart"></div>
+    </div>-->
   </div>
 
   <div class="post-content">
