--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -26,5 +26,15 @@
     <script src="/js/d3.v4.min.js"></script>
     <script src="/js/main.js"></script>
 
+    <!--Start of Zendesk Chat Script-->
+    <script type="text/javascript">
+    window.$zopim||(function(d,s){var z=$zopim=function(c){z._.push(c)},$=z.s=
+    d.createElement(s),e=d.getElementsByTagName(s)[0];z.set=function(o){z.set.
+    _.push(o)};z._=[];z.set._=[];$.async=!0;$.setAttribute("charset","utf-8");
+    $.src="https://v2.zopim.com/?4i7Iq4DZ2A1k3ggcnEZBWXw7YB8IZsnG";z.t=+new Date;$.
+    type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
+    </script>
+    <!--End of Zendesk Chat Script-->
+
   </body>
 </html>
