changed mentions articles of code4sa to openup

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,7 +36,7 @@
         </div>
         <div class="row logos">
           <div class="col-xs-6 col-sm-4 col-md-2 text-center col-logo">
-            <a href="http://code4sa.org" target="_blank"><img src="{{ "/img/logo.png" | prepend: site.baseurl }}" class="c4sa logo img-responsive" alt="Code for SA"></a>
+            <a href="https://openup.org.za" target="_blank"><img src="{{ "/img/logo.svg" | prepend: site.baseurl }}" class="openup logo img-responsive" alt="OpenUp"></a>
           </div>
           <div class="col-xs-6 col-sm-4 col-md-2 text-center col-logo">
             <a href="https://indigotrust.org.uk/" target="_blank"><img src="{{ "/img/indigo_trust.png" | prepend: site.baseurl }}" class="indigo-trust logo img-responsive" alt="Indigo Trust"></a>
