--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -175,7 +175,7 @@ header {
     }
 }
 
-h2, .h2 {
+h2, .h2, h3 {
     font-weight: 600;
     color: #333;
 }
@@ -213,6 +213,8 @@ h2, .h2 {
         width: 100%;
         height: 200px;
         border-radius: 5px;
+        background-position: center;
+        background-size: cover;
     }
 
     .btn_text {
@@ -234,54 +236,38 @@ h2, .h2 {
 
     .btn_nat {
         background-image: url(/img/provinces/national_4.jpg);
-        background-position: center;
-        background-size: cover;
     }
     .btn_wc {
         background-image: url(/img/provinces/westerncape.jpg);
-        background-position: center;
-        background-size: cover;
     }
     .btn_gt {
         background-image: url(/img/provinces/gauteng.jpg);
-        background-position: center;
-        background-size: cover;
     }
     .btn_kzn {
         background-image: url(/img/provinces/kwazulunatal.jpg);
-        background-position: center;
-        background-size: cover;
     }
     .btn_ec {
         background-image: url(/img/provinces/easterncape.jpg);
-        background-position: center;
-        background-size: cover;
     }
     .btn_fs {
         background-image: url(/img/provinces/freestate.jpg);
-        background-position: center;
-        background-size: cover;
     }
     .btn_nw {
         background-image: url(/img/provinces/northwest.jpg);
-        background-position: center;
-        background-size: cover;
     }
     .btn_nc {
         background-image: url(/img/provinces/northerncape.jpg);
-        background-size: cover;
+        background-position: left;
     }
     .btn_mp {
         background-image: url(/img/provinces/mpumalanga.jpg);
-        background-position: center;
-        background-size: cover;
     }
     .btn_lim {
         background-image: url(/img/provinces/limpopo.jpg);
-        background-position: center;
-        background-size: cover;
     }
-
+    .btn_tv {
+        background-image: url(/img/provinces/transvaal.jpg);
+    }
 }
 
 .readmore {
