--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,6 +22,7 @@
             <ul class="list-unstyled">
               <li><a href="https://github.com/Code4SA/opengazettes">Open Gazettes on GitHub</a></li>
               <li><a href="https://twitter.com/hashtag/GazetteLiberation" target="_blank">Follow the conversation on Twitter <img width="24px" src="{{ "/img/icons/twitter-hover.png" | prepend: site.baseurl }}" alt="Follow the conversation around OpenGazettes on Twitter" /></a></li>
+              <li><a href="/terms.html">Legal Terms</a></li>
             </ul>
           </div>
         </div>
