Inform users about gazettes.africa and then redirect them

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@ layout: base
 ---
 <div class="page-content">
   <div class="container">
+      {% include gazettes_africa_notice.html %}
       {{ content }}
   </div>
 </div>
