Make gazettes.africa announcement more prominent with a modal/dialog

--- a/_includes/gazettes_africa_notice.html
+++ b/_includes/gazettes_africa_notice.html
@@ -1,3 +1,26 @@
-<div class="alert alert-info" role="alert">
-  OpenGazettes South Africa advises the use of our partner's website <a href="https://gazettes.africa/gazettes/za/" class="alert-link">https://gazettes.africa</a> which now makes up to date gazettes available for public use. You will be redirected there in 1 minute.
+<div
+  id="gazettesAfricaModal"
+  class="modal"
+  tabindex="-1"
+  role="dialog"
+  data-backdrop="static"
+>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header alert-danger">
+        <h5 class="modal-title"></h5>
+      </div>
+      <div class="modal-body alert-danger">
+        <p>
+          OpenGazettes South Africa advises the use of our partner's website
+          <a href="https://gazettes.africa/gazettes/za/" class="alert-link"
+            >https://gazettes.africa</a
+          >
+          which now makes up to date gazettes available for public use. You will
+          be redirected there in 1 minute.
+        </p>
+      </div>
+      <div class="modal-footer alert-danger"></div>
+    </div>
+  </div>
 </div>
