--- a/css/main.scss
+++ b/css/main.scss
@@ -27,5 +27,6 @@ $navbar-border-radius: 0px;
 @import
         "bootstrap",
         "bootstrap/alerts",
+        "bootstrap/modals",
         "site"
 ;
